Reformat encryprtion chat app